<resources>
    <string name="app_name">Business App</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="plan_desc">Every plan includes remarkable social tools."\n" The one is great for small teams.</string>
    <string name="standard_feature"> " \u2022 "All in one social box"\n"
                                     "\u2022 "Real time Brand Monitoring "\n"
                                     "\u2022 "Advanced Publishing features"\n"
                                     "\u2022 "All in one social box"\n"
                                     "\u2022 "Real time Brand Monitoring "\n"
                                     "\u2022 "Advanced Publishing features"\n".</string>


    <string name="tv">About us</string>
    <string name="tv1">Our Services</string>
    <string name="tv2">Branding Design</string>
    <string name="tv3">Web Design</string>
    <string name="tv4">Mobile App</string>
    <string name="tv5">Video Production</string>

    <string name="tv6">Our Clients</string>
    <string name="videos">Videos</string>
    <string name="images">Images</string>
    <string name="Event_place_1">Newyork</string>
    <string name="Event_date_1">02 Oct,2015</string>
    <string name="event_name_1">Company Event Hamburg March 2015</string>


    <string name="home_about_msg">Lorem Ipsum is simply dummy text of printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book</string>
    <string-array name="header_titles">
        <item>What is Lorem ipsum dolor sit amet?</item>
        <item>What is Lorem ipsum dolor sit amet?</item>
        <item>What is Lorem ipsum dolor sit amet?</item>
        <item>What is Lorem ipsum dolor sit amet?</item>
        <item>What is Lorem ipsum dolor sit amet?</item>
        <item>What is Lorem ipsum dolor sit amet?</item>
        <item>What is Lorem ipsum dolor sit amet?</item>
        <item>What is Lorem ipsum dolor sit amet?</item>
    </string-array>
    <string-array name="h1_items">
        <item>Lorem Ipsum is dummy text which has no meaning however
            looks very similar to real text. Common names for Lorem ipsum text include: -
            blind text - dummy text - greeked text - placeholder text - mock content -
            filler text</item>
    </string-array>
    <string-array name="h2_items">
        <item>Lorem Ipsum is dummy text which has no meaning however
            looks very similar to real text. Common names for Lorem ipsum text include: -
            blind text - dummy text - greeked text - placeholder text - mock content -
            filler text</item>
    </string-array>
    <string-array name="h3_items">
        <item>Lorem Ipsum is dummy text which has no meaning however
            looks very similar to real text. Common names for Lorem ipsum text include: -
            blind text - dummy text - greeked text - placeholder text - mock content -
            filler text</item>
    </string-array>
    <string-array name="h4_items">
        <item>Lorem Ipsum is dummy text which has no meaning however
            looks very similar to real text. Common names for Lorem ipsum text include: -
            blind text - dummy text - greeked text - placeholder text - mock content -
            filler text</item>
    </string-array>
    <string-array name="h5_items">
        <item>Lorem Ipsum is dummy text which has no meaning however
            looks very similar to real text. Common names for Lorem ipsum text include: -
            blind text - dummy text - greeked text - placeholder text - mock content -
            filler text</item>
    </string-array>
    <string-array name="h6_items">
        <item>Lorem Ipsum is dummy text which has no meaning however
            looks very similar to real text. Common names for Lorem ipsum text include: -
            blind text - dummy text - greeked text - placeholder text - mock content -
            filler text</item>
    </string-array>
    <string-array name="h7_items">
        <item>Lorem Ipsum is dummy text which has no meaning however
            looks very similar to real text. Common names for Lorem ipsum text include: -
            blind text - dummy text - greeked text - placeholder text - mock content -
            filler text</item>
    </string-array>
    <string-array name="h8_items">
        <item>Lorem Ipsum is dummy text which has no meaning however
            looks very similar to real text. Common names for Lorem ipsum text include: -
            blind text - dummy text - greeked text - placeholder text - mock content -
            filler text</item>
    </string-array>

    <string-array name="event_title_name">

        <item>Sona Mahapatra</item>


    </string-array>


    <string-array name="event_date_time">

        <item>17 Oct 2015</item>


    </string-array>
    <string-array name="event_clock_time">

        <item>00:00 Am Onwards</item>


    </string-array>


</resources>
