<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_170sdp"
                android:background="@drawable/workshop"
                android:id="@+id/main_event_image"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/event_name_1"
                android:textSize="@dimen/_20sdp"
                android:padding="@dimen/_10sdp"
                android:textColor="#333333"
                android:id="@+id/event_name"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/calendar_icon"
                    android:id="@+id/calender"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Event_date_1"
                    android:layout_marginLeft="@dimen/_50sdp"
                    android:id="@+id/date"
                    android:layout_alignLeft="@+id/calender"
                    android:layout_alignBottom="@+id/calender"
                    android:textSize="@dimen/_15sdp"
                    android:textColor="#595959"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/micon"
                    android:id="@+id/location"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Event_place_1"
                    android:layout_marginLeft="@dimen/_50sdp"
                    android:id="@+id/place"
                    android:layout_alignLeft="@+id/location"
                    android:layout_alignBottom="@+id/location"
                    android:textSize="@dimen/_15sdp"
                    android:textColor="#595959"/>
            </RelativeLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv7"
                android:padding="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:textColor="#333333"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/images"
                android:padding="@dimen/_10sdp"
                android:textColor="#333333"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerView_images"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_150sdp">
            </android.support.v7.widget.RecyclerView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/videos"
                android:padding="@dimen/_10sdp"
                android:textColor="#333333"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerView_videos"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_150sdp"
                >
            </android.support.v7.widget.RecyclerView>




        </LinearLayout>
    </ScrollView>
</LinearLayout>
